fixed logo right alignment issue

--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -36,7 +36,7 @@ header {
 #barTitle {
 	width: 31%;
 	text-align: center;
-	float: right;
+	float: left;
 }
 #hamBtnWrapper {
 	text-align: right;
